collapse button, fix for #826

--- a/src/less/mail-thread.less
+++ b/src/less/mail-thread.less
@@ -91,9 +91,33 @@
 		.email-formatting();
 
 		.collapse-blockquote {
-			background: #ddd;
-			padding-left: 8px;
-			padding-right: 8px;
+			background: @lava-border-color;
+			color: @lava-text;
+			height: 1.3rem;
+			width: 3.2rem;
+			display: inline-block;
+			margin-bottom: .9rem;
+			position: relative;
+			span, span:before, span:after{
+				content: ' ';
+				background: @lava-text;
+				height: .4rem;
+				width: .4rem;
+				border-radius: 50px;
+				display: block;
+				position: absolute;
+				
+			}
+			span{
+				left: 1.4rem;
+				top: .5rem;
+				&:before{
+					left: -.8rem;
+				}
+				&:after{
+					left: .8rem;
+				}
+			}
 		}
 	}
 
